# WinBinder

./: CMakeLists.txt  README.md  main.cpp
Actions/ActionSrc/Action/: Action.cpp  Action.h
Actions/BrowserSrc/Browser/: Browser.cpp  Browser.h
Actions/BrowserSrc/BrowserAction/: BrowserAction.cpp  BrowserAction.h
Actions/ExeSrc/Exe/: Exe.cpp  Exe.h
Actions/ExeSrc/ExeAction/: ExeAction.cpp  ExeAction.h
Actions/TextSrc/Text/: Text.cpp  Text.h
Actions/TextSrc/TextAction/: TextAction.cpp  TextAction.h
Api/BindSrc/Bind/: Bind.cpp  Bind.h
Api/KeyboardSrc/Keyboard/: Keyboard.cpp  Keyboard.h
Api/KeyboardSrc/Mappers/Mapper/: Mapper.cpp  Mapper.h
Api/KeyboardSrc/Mappers/MixedMapper/: MixedMapper.cpp  MixedMapper.h
Api/MouseSrc/Mouse/: Mouse.cpp  Mouse.h
Api/ScreenSrc/Screen/: Screen.cpp  Screen.h
Utils/Json/: JsonUtil.cpp  JsonUtil.h
cfg/: config.json
